# student-info

./: CMakeLists.txt  LICENSE  README.md  main.c  student_add.c  student_list.c  student_modify.c  student_query.c  student_remove.c  student_sort.c
include/: config.h  date.h  student.h  student_list.h  util.h
